# rummy

src/client/: README.md  package-lock.json  package.json
src/game/: Cargo.toml
src/game/src/: main.rs  player.rs  testing.rs
src/game/src/cards/: card.rs  deck.rs  meld.rs  mod.rs  suit_rank.rs  tests.rs
src/game/src/cards/tests/: deck.rs  run.rs  set.rs
src/game/src/game/: actions.rs  mod.rs  phases.rs  state.rs
src/game/src/game/typestate/: actions.rs  mod.rs  phases.rs  transitions.rs
src/game/src/game/variants/: basic.rs  mod.rs  standard.rs
src/game/src/game/variants/standard/: mod.rs
src/server/: .env  Cargo.toml
src/server/migrations/: 2_user.sql  3_game.sql  4_game_round.sql  5_game_actions.sql  6_economy.sql  README.md
src/server/src/: config.rs  lib.rs  main.rs
src/server/src/http/: mod.rs
src/server/src/http/error/: mod.rs
src/server/src/http/users/: auth.rs  handlers.rs  mod.rs  routes.rs  types.rs  util.rs
src/server/src/rummy/: mod.rs  player.rs
src/server/src/rummy/cards/: card.rs  deck.rs  meld.rs  suit_rank.rs
src/server/src/rummy/game/: error.rs  mod.rs  score.rs  state.rs  traits.rs
src/server/src/rummy/game/variants/: basic.rs  classic.rs
