[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
rand = { version = "0.8.5", features = ["std_rng"] }
serde =  { version = "1.0.203", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
