[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core crates - runtime, web framework, database interface
axum = "0.7.5"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }

# Axum uses Tower types
tower = "0.4.13"
tower-http = "0.5.2"

# User authentication
argon2 = "0.5.3"
hmac = "0.12.1"
jwt = "0.16.0"

# Other utility crates
serde = { version = "1.0.198", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenv = "0.15.0"
